Attempt at fixing image SERP grid alignment arquivo/pwa-technologies#1074

--- a/src/main/webapp/css/newStyle.css
+++ b/src/main/webapp/css/newStyle.css
@@ -2613,23 +2613,23 @@ h4.modalTitle {
 }
 @media (max-width: 2400px) {
   #photos {
-    -moz-column-count: 9;
-    -webkit-column-count: 9;
-    column-count: 9;
+    -moz-column-count: 8;
+    -webkit-column-count: 8;
+    column-count: 8;
   }
 }
 @media (max-width: 2000px) {
   #photos {
-    -moz-column-count: 9;
-    -webkit-column-count: 9;
-    column-count: 9;
+    -moz-column-count: 8;
+    -webkit-column-count: 8;
+    column-count: 8;
   }
 }
 @media (max-width: 1600px) {
   #photos {
-    -moz-column-count: 5;
-    -webkit-column-count: 5;
-    column-count: 5;
+    -moz-column-count: 6;
+    -webkit-column-count: 6;
+    column-count: 6;
   }
 }
 @media (max-width: 1200px) {
@@ -2658,7 +2658,7 @@ h4.modalTitle {
     /* -moz-column-count: 1;
     -webkit-column-count: 1;
     column-count: 1;*/
-    -webkit-column-count: 3;
+    -webkit-column-count: 4;
     column-count: 4;
     width: 100% !important;
     max-width: 945px !important;
@@ -3297,7 +3297,7 @@ h4.modalTitle {
 }
 @media (min-width:1441px) {
   .imageContent {
-    width: 10% !important;
+    width: 11% !important;
     vertical-align: initial;
     justify-content: center;
     display: inline-flex;
@@ -8610,23 +8610,23 @@ h4.modalTitle {
 }
 @media (max-width: 2400px) {
   #photos {
-    -moz-column-count: 9;
-    -webkit-column-count: 9;
-    column-count: 9;
+    -moz-column-count: 8;
+    -webkit-column-count: 8;
+    column-count: 8;
   }
 }
 @media (max-width: 2000px) {
   #photos {
-    -moz-column-count: 9;
-    -webkit-column-count: 9;
-    column-count: 9;
+    -moz-column-count: 8;
+    -webkit-column-count: 8;
+    column-count: 8;
   }
 }
 @media (max-width: 1600px) {
   #photos {
-    -moz-column-count: 5;
-    -webkit-column-count: 5;
-    column-count: 5;
+    -moz-column-count: 6;
+    -webkit-column-count: 6;
+    column-count: 6;
   }
 }
 @media (max-width: 1200px) {
@@ -8655,7 +8655,7 @@ h4.modalTitle {
     /* -moz-column-count: 1;
     -webkit-column-count: 1;
     column-count: 1;*/
-    -webkit-column-count: 3;
+    -webkit-column-count: 4;
     column-count: 4;
     width: 100% !important;
     max-width: 945px !important;
@@ -9354,7 +9354,7 @@ body#homeImages #photos {
 }
 @media (min-width:1441px) {
   .imageContent {
-    width: 10% !important;
+    width: 11% !important;
     vertical-align: initial;
     justify-content: center;
     display: inline-flex;
